# gds-idea-pypi

./: .gitignore  AGENTS.md  PLAN.md  README.md  config.toml  pyproject.toml
.github/workflows/: publish.yml  pypi-release.yml
src/gds_idea_pypi/: __main__.py  config.py  github.py  index.py
