[project]
name = "gds-idea-pypi"
version = "0.1.0"
description = "Static PEP 503 PyPI index generator backed by GitHub Releases"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gds_idea_pypi"]
